# ros2_workspace_Kocis

./: .gitignore  README.md
cpp_pkg/: CMakeLists.txt  package.xml
cpp_pkg/src/: complex_publisher.cpp  my_first_node_cpp.cpp
install/: local_setup.sh  setup.sh
log/: latest_build
py_pkg/: package.xml  setup.py
py_pkg/py_pkg/: countuntil_client.py  countwords_client.py  countwords_service.py  draw_house.py  my_first_node_py.py  znamenitosti_pub_sub.py
rosbag2_2025_11_12-20_17_33/: metadata.yaml  rosbag2_2025_11_12-20_17_33_0.mcap
rosbag2_2025_11_12-21_10_24/: metadata.yaml  rosbag2_2025_11_12-21_10_24_0.mcap
rosbag2_2026_02_03-12_35_32/: metadata.yaml
src/lv2_interface/: CMakeLists.txt  package.xml
src/lv2_interface/bag/: znamenitosti_bag.py
src/lv2_interface/config/: config.yaml
src/lv2_interface/launch/: znamenitosti.launch.py
src/lv2_interface/msg/: Znamenitost.msg
src/lv4_mob_rob_interfaces/: CMakeLists.txt  package.xml
src/lv4_mob_rob_navigation/: package.xml  setup.cfg  setup.py
src/lv4_mob_rob_navigation/action/: NavigateToPose.action
src/lv4_mob_rob_navigation/config/: gz_bridge.yaml
src/lv4_mob_rob_navigation/launch/: mob_rob_navigation_launch.xml
src/lv4_mob_rob_navigation/lv4_mob_rob_navigation/: keyboard_navigation.py  navigator.py  obstacle_detector.py
src/mob_rob_bringup/: package.xml  setup.cfg  setup.py
src/mob_rob_bringup/config/: gz_bridge.yaml
src/mob_rob_bringup/launch/: mob_rob_gz_launch.xml
src/mob_rob_bringup/world/: depot.sdfZone.Identifier
src/mob_rob_bringup_lv3/: CMakeLists.txt  package.xml
src/mob_rob_bringup_lv3/config/: gz_bridge.yaml
src/mob_rob_bringup_lv3/launch/: robot_sim.launch.xml
src/mob_rob_description/: package.xml  setup.cfg  setup.py
src/mob_rob_description/urdf/: lv3_mob_rob.urdf  lv4_mob_rob.urdf  lv_mob_rob.urdf  mob_rob.urdf  mob_rob.urdf.xacro  mob_rob_gz.urdf.xacro  mob_rob_macros.urdf.xacro  mob_rob_model.urdf.xacro
src/mob_rob_interfaces/: CMakeLists.txt  package.xml
src/mob_rob_interfaces/action/: Navigate.action
src/mob_rob_navigation/: package.xml  setup.cfg  setup.py
src/mob_rob_navigation/mob_rob_navigation/: collision_avoidance.py  nav_action_client.py  nav_action_server.py
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/action/: CountUntil.action
src/my_interfaces/srv/: CountWords.srv
src/py_pkg/: setup.py
src/py_pkg/py_pkg/: complex_publisher.py  complex_subscriber.py  countuntil_action.py  draw_house.py  draw_lana.py  draw_lana_lv5.py  path_visualizer.py  tf_pub.py  (+2 more)
src/rob_manip_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/rob_manip_control/: package.xml  setup.cfg  setup.py
src/rob_manip_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/rob_manip_moveit/: .setup_assistant  package.xml
src/robot_nav_pkg/: package.xml  setup.cfg  setup.py
(+33 files in other folders)
